modularized species comparative size

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   
-  <link rel="stylesheet" type="text/css" href="species-detail/icons/icons.css">
+  <link rel="stylesheet" type="text/css" href="icons/species-compsize/icons.css">
   <link rel="stylesheet" type="text/css" href="species-distmap/mapstyle.css">
   <link rel="stylesheet" href="style.css">
   
@@ -44,6 +44,8 @@
   <script src="species-detail/species-detail.module.js"></script>
   <script src="species-detail/species-detail.component.js"></script>
   <script src="species-detail/species-detail.directives.js"></script>
+  <script src="species-compsize/species-compsize.module.js"></script>
+  <script src="species-compsize/species-compsize.component.js"></script>
 		
   <script src="core/species/species.module.js"></script>
   <script src="core/species/species.service.js"></script>
