-added sidebar to project;

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   
+  <link rel="stylesheet" type="text/css" href="css/simple-sidebar.css">
+  
   <link rel="stylesheet" type="text/css" href="icons/species-compsize/icons.css">
   <link rel="stylesheet" type="text/css" href="species-distmap/mapstyle.css">
   <link rel="stylesheet" href="style.css">
@@ -26,9 +28,7 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  
-  
-  <div ng-view></div>
+  	<div ng-view></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
