--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   
-  <link rel="stylesheet" type="text/css" href="css/simple-sidebar.css">
+  <link rel="stylesheet" type="text/css" href="nav-sidebar/sidebar.style.css">
   
   <link rel="stylesheet" type="text/css" href="icons/species-compsize/icons.css">
   <link rel="stylesheet" type="text/css" href="species-distmap/mapstyle.css">
@@ -49,6 +49,9 @@
 		
   <script src="core/species/species.module.js"></script>
   <script src="core/species/species.service.js"></script>
+  
+  <script src="nav-sidebar/sidebar.module.js"></script>
+  <script src="nav-sidebar/sidebar.component.js"></script>
   
 
   <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
